# ep-pipeline

./: .gitignore  main.py  pyproject.toml  single_building.py  test_batch_simulation.py  test_ecm_process.py  test_single_building.py
.roo/: mcp.json
backend/bases/energyplus/: executor.py
backend/configs/: analysis.yaml  ecm.yaml  optimization.yaml  paths.yaml  pv.yaml  simulation.yaml  storage.yaml
backend/data/cambium/: Cambium24_HighRECost_LowNGPrice_hourly_PJM_West_2025.csv  Cambium24_HighRECost_LowNGPrice_hourly_PJM_West_2030.csv  Cambium24_HighRECost_LowNGPrice_hourly_PJM_West_2035.csv  Cambium24_HighRECost_LowNGPrice_hourly_PJM_West_2040.csv  Cambium24_HighRECost_LowNGPrice_hourly_PJM_West_2045.csv  Cambium24_HighRECost_LowNGPrice_hourly_PJM_West_2050.csv  Cambium24_LowRECost_hourly_PJM_West_2025.csv  Cambium24_LowRECost_hourly_PJM_West_2030.csv  Cambium24_LowRECost_hourly_PJM_West_2035.csv  Cambium24_LowRECost_hourly_PJM_West_2040.csv  Cambium24_LowRECost_hourly_PJM_West_2045.csv  Cambium24_LowRECost_hourly_PJM_West_2050.csv  Cambium24_MidCase_hourly_PJM_West_2025.csv  (+5 more)
backend/models/: __init__.py  building.py  config_models.py  ecm_parameters.py  enums.py  location.py  simulation_job.py  simulation_result.py  weather_file.py
backend/script/: parse_data.py  prepare_paper_data.py
backend/visualization/: __init__.py  charts.py  config.py  data_loader.py  data_processor.py  journal_style.py  main.py  metrics.py  query.py
docs/: ECM_OPTIMIZATION_WORKFLOW.md
docs/_dev/: PYDANTIC_CONFIG_MIGRATION.md  REFACTORING_GUIDE.md
tests/: conftest.py
(+353 files in other folders)
