[project]
name = "ep-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eppy>=0.5.63",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "scipy>=1.16.3",
    "xgboost>=3.1.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
    "N",
]

ignore = [
    "E501", # Line too long
    "N805"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
